fix typo in script

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>I want that</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
   </head>
   <body>
     <div id="main-container">test</div>
